# scratchpad-performance-lens

./: .gitignore  README.md  pyproject.toml
docs/: extraction-notes.md
examples/: scratchpad.toml
src/scratchpad_performance_lens/: __init__.py  cli.py  config.py
src/scratchpad_performance_lens/tools/: __init__.py  app_package.py  capacity_report.py  frame_metrics.py  generate_flamegraphs.py  perf_report_shared.py  performance_review.py  project_code_metrics.py  report_modes.py  resource_profiles.py  search_speed.py  slowspots.py  speed_efficiency_report.py
tests/: test_cli.py
